--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 	<!----header start--->
 	<header>
-		<a href="#" class="logo">Bags</a>
+		<a href="#" class="logo">Shadex Clothings</a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
 			<li><a href="#shop">Shop</a></li>
-			<li><a href="#about">About</a></li>
+			<li><a href="#about">About Us</a></li>
 			<li><a href="#faq">Faq</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
@@ -43,7 +43,7 @@
 			<div class="box">
 				<img src="img/main1.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -52,7 +52,7 @@
 			<div class="box">
 				<img src="img/main2.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -61,7 +61,7 @@
 			<div class="box">
 				<img src="img/main3.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -70,7 +70,7 @@
 			<div class="box">
 				<img src="img/main4.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -79,7 +79,7 @@
 			<div class="box">
 				<img src="img/main5.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -88,7 +88,7 @@
 			<div class="box">
 				<img src="img/main6.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -97,7 +97,7 @@
 			<div class="box">
 				<img src="img/main7.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -106,7 +106,7 @@
 			<div class="box">
 				<img src="img/main8.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -115,7 +115,7 @@
 			<div class="box">
 				<img src="img/main9.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -124,7 +124,7 @@
 			<div class="box">
 				<img src="img/main10.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -133,7 +133,7 @@
 			<div class="box">
 				<img src="img/main11.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -142,7 +142,7 @@
 			<div class="box">
 				<img src="img/main12.jpg">
 				<h4>I'm a product</h4>
-				<h5>$15.00</h5>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -154,8 +154,18 @@
 	<!----about start--->
 	<section class="about" id="about">
 		<div class="about-content">
-			<h2>About</h2>
-			<p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+			<h2>About Us</h2>
+			<p>Welcome to Shadex Clothings, your go-to destination for premium fashion and style.
+
+Our mission is to provide women with versatile and elegant attire for every occasion. Whether you're looking for sophisticated corporate wear, timeless traditional dresses, or stylish casual outfits, Shadex Clothings has got you covered.
+
+With years of experience in the fashion industry, our professional fashion designer is dedicated to creating high-quality and innovative pieces that not only look great but also make you feel confident and comfortable.
+
+Our collections are carefully crafted with the finest materials and attention to detail, making sure that each dress is a true masterpiece. From chic and modern cuts to classic and elegant styles, you'll find something that perfectly fits your taste and lifestyle.
+
+Take a look at our gallery and discover a world of fashion that you'll love. Whether you're dressing for a special occasion or simply want to update your wardrobe, Shadex Clothings has got you covered.
+
+Experience the luxury of fashion like never before. Shop with Shadex Clothings today and unleash your true style.</p>
 		</div>
 	</section>
 
@@ -172,12 +182,12 @@
 			<div class="contact-content">
 				<li><a href="#">Shipping & Returns</a></li>
 				<li><a href="#">Store Policy</a></li>
-				<li><a href="#">Payment Methods</a></li>
+				<li><a href="https://www.paylink.ng/shadexclothings">Payment Methods</a></li>
 			</div>
 
 			<div class="contact-content">
 				<li><a href="#">Contact</a></li>
-				<li><a href="#">Tel: 123-456-7890</a></li>
+				<li><a href="#">Tel: (+234)817-609-2660</a></li>
 			</div>
 
 			<div class="contact-content">
@@ -197,7 +207,7 @@
 	</section>
 
 	<div class="last">
-		<p>© 2023 by Tahmid. Proudly created with Tahmid Ahmed</p>
+		<p>© 2023 by Olaoluwa. Proudly created with Olayemi Olaoluwa</p>
 	</div>
 
 	<!----custom js link--->
