--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
 	<section class="about" id="about">
 		<div class="about-content">
 			<h2>About Us</h2>
-			<p>Welcome to Shadex Clothings, your go-to destination for premium fashion and style.
+			<p text-align="justify">Welcome to Shadex Clothings, your go-to destination for premium fashion and style.
 
-Our mission is to provide women with versatile and elegant attire for every occasion. Whether you're looking for sophisticated corporate wear, timeless traditional dresses, or stylish casual outfits, Shadex Clothings has got you covered.
+Our mission is to provide women with versatile and elegant attire for every occasion. Whether you're looking for sophisticated corporate wear, timeless traditional dresses, or stylish casual outfits, Shadex Clothings has got you covered.<br><br>
 
-With years of experience in the fashion industry, our professional fashion designer is dedicated to creating high-quality and innovative pieces that not only look great but also make you feel confident and comfortable.
+With years of experience in the fashion industry, our professional fashion designer is dedicated to creating high-quality and innovative pieces that not only look great but also make you feel confident and comfortable.<br>
 
-Our collections are carefully crafted with the finest materials and attention to detail, making sure that each dress is a true masterpiece. From chic and modern cuts to classic and elegant styles, you'll find something that perfectly fits your taste and lifestyle.
+Our collections are carefully crafted with the finest materials and attention to detail, making sure that each dress is a true masterpiece. From chic and modern cuts to classic and elegant styles, you'll find something that perfectly fits your taste and lifestyle.<br><br>
 
-Take a look at our gallery and discover a world of fashion that you'll love. Whether you're dressing for a special occasion or simply want to update your wardrobe, Shadex Clothings has got you covered.
+Take a look at our gallery and discover a world of fashion that you'll love. Whether you're dressing for a special occasion or simply want to update your wardrobe, Shadex Clothings has got you covered.<br>
 
 Experience the luxury of fashion like never before. Shop with Shadex Clothings today and unleash your true style.</p>
 		</div>
