--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main9.jpg">
+				<img src="img/img9.png">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
