--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 			</div>
 
 			<div class="box">
-				<img src="img/img9.png">
-				<h4>I'm a product</h4>
+				<img src="img/img9.PNG">
+				<h4>I'm another product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
