--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<section class="shop" id="shop">
 		<div class="container">
 			<div class="box">
-				<img src="img/main1.jpg">
+				<img src="img/img1.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -48,7 +48,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main2.jpg">
+				<img src="img/img2.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main3.jpg">
+				<img src="img/img3.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -66,7 +66,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main4.jpg">
+				<img src="img/img4.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main5.jpg">
+				<img src="img/img5.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -84,7 +84,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main6.jpg">
+				<img src="img/img6.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -93,7 +93,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main7.jpg">
+				<img src="img/img7.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -102,7 +102,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main8.jpg">
+				<img src="img/img8.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -112,15 +112,6 @@
 
 			<div class="box">
 				<img src="img/img9.PNG">
-				<h4>I'm another product</h4>
-				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
-				<div class="cart">
-					<a href="#"><i class='bx bx-cart' ></i></a>
-				</div>
-			</div>
-
-			<div class="box">
-				<img src="img/main10.jpg">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
@@ -129,7 +120,16 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main11.jpg">
+				<img src="img/img10.PNG">
+				<h4>I'm a product</h4>
+				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
+				<div class="cart">
+					<a href="#"><i class='bx bx-cart' ></i></a>
+				</div>
+			</div>
+
+			<div class="box">
+				<img src="img/img11.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
