--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/main12.jpg">
+				<img src="img/img12.PNG">
 				<h4>I'm a product</h4>
 				<h5><a href="https://www.paylink.ng/shadexclothings">Order Now</a></h5>
 				<div class="cart">
