--- a/index.html
+++ b/index.html
@@ -185,14 +185,13 @@ Experience the luxury of fashion like never before. Shop with Shadex Clothings t
 
 			<div class="contact-content">
 				<li><a href="#">Contact</a></li>
-				<li><a href="https://api.whatsapp.com/wa.link/6kliyw">Tel: (+234)817-609-2660</a></li>
+				<li><a href="#">Tel: (+234)817-609-2660</a></li>
 			</div>
 
 			<div class="contact-content">
 				<li><a href="https://www.facebook.com/shadexclothing">Facebook</a></li>
 				<li><a href="https://instagram.com/sadeopeyemi?igshid=YmMyMTA2M2Y=">Instagram</a></li>
 				<li><a href="#">TikTok</a></li>
-				<li><a href="https://api.whatsapp.com/wa.link/6kliyw">WhatsApp</a></li>
 			</div>
 
 		</div>
