--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Experience the luxury of fashion like never before. Shop with Shadex Clothings t
 	</section>
 
 	<div class="last">
-		<p>© 2023 by Olaoluwa. Proudly created with Olayemi Olaoluwa</p>
+		<p>© 2024 by Shadex Clothings. Proudly Designed by <a href = "#">Wealth Hub tech</a></p>
 	</div>
 
 	<!----custom js link--->
