--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ Experience the luxury of fashion like never before. Shop with Shadex Clothings t
 	<section class="contact" id="contact">
 		<div class="main-contact">
 			<div class="contact-content">
-				<li><a href="#shop">Shop</a></li>
+			  <li><a href="#Quick Links">Quick Links</a></li>
+			  <li><a href="#shop">Shop</a></li>
 			  <li><a href="#about">About</a></li>
 			  <li><a href="#faq">Faq</a></li>
 			  <li><a href="#contact">Contact</a></li>
