--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Experience the luxury of fashion like never before. Shop with Shadex Clothings t
 	</section>
 
 	<div class="last">
-		<p>© 2024 by Shadex Clothings. Proudly Designed by <a href = "#">Wealth Hub tech</a></p>
+		<p>© 2024 by Shadex Clothings. Proudly Designed by <a href = "#">Wealth Hub Tech</a></p>
 	</div>
 
 	<!----custom js link--->
